contrib/kube-prometheus/manifests/ingress/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/auth-secret: basic-auth
    ingress.kubernetes.io/auth-realm: "Authentication Required"
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-WEBAUTH-USER $remote_user;
spec:
  tls:
  - hosts:
    - ##GRAFANA_HOST##
    secretName: grafana-tls
  rules:
  - host: ##GRAFANA_HOST##
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: web
