contrib/kube-prometheus/manifests/ingress/prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  annotations:
    ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/auth-secret: basic-auth
    ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  rules:
  - host: ##PROMETHEUS_HOST##
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-k8s
          servicePort: web
